--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aws-xray-sdk": "^3.3.3",
+    "dayjs": "^1.10.7",
     "dynamodb": "^1.3.0",
     "source-map-support": "^0.5.19",
     "ts-jest": "^27.0.5",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.14.25",
     "@types/shelljs": "^0.8.9",
